// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSVGStyles Returns correct styles 1`] = `
{
  "  .maxi-svg-icon-block__icon svg circle[data-fill]:not([fill^="none"])": {
    "SVGPathFill": {
      "general": {
        "fill": "var(--maxi-light-icon-fill,rgba(var(--maxi-light-color-4,255,74,23),1))",
      },
      "label": "SVG path-fill",
    },
  },
  "  .maxi-svg-icon-block__icon svg circle[data-stroke]:not([stroke^="none"])": {
    "SVGPathStroke": {
      "general": {
        "stroke": "var(--maxi-light-icon-stroke,rgba(var(--maxi-light-color-7,8,18,25),1))",
      },
      "label": "SVG Path stroke",
    },
  },
  "  .maxi-svg-icon-block__icon svg g[data-fill]:not([fill^="none"])": {
    "SVGPathFill": {
      "general": {
        "fill": "var(--maxi-light-icon-fill,rgba(var(--maxi-light-color-4,255,74,23),1))",
      },
      "label": "SVG path-fill",
    },
  },
  "  .maxi-svg-icon-block__icon svg g[data-stroke]:not([stroke^="none"])": {
    "SVGPathStroke": {
      "general": {
        "stroke": "var(--maxi-light-icon-stroke,rgba(var(--maxi-light-color-7,8,18,25),1))",
      },
      "label": "SVG Path stroke",
    },
  },
  "  .maxi-svg-icon-block__icon svg path": {
    "SVGPath": {
      "general": {
        "stroke-width": 2,
      },
      "label": "SVG path",
      "m": {
        "stroke-width": 20,
      },
    },
  },
  "  .maxi-svg-icon-block__icon svg path[data-fill]:not([fill^="none"])": {
    "SVGPathFill": {
      "general": {
        "fill": "var(--maxi-light-icon-fill,rgba(var(--maxi-light-color-4,255,74,23),1))",
      },
      "label": "SVG path-fill",
    },
  },
  "  .maxi-svg-icon-block__icon svg path[data-stroke]:not([stroke^="none"])": {
    "SVGPathStroke": {
      "general": {
        "stroke": "var(--maxi-light-icon-stroke,rgba(var(--maxi-light-color-7,8,18,25),1))",
      },
      "label": "SVG Path stroke",
    },
  },
  "  .maxi-svg-icon-block__icon svg use[data-fill]:not([fill^="none"])": {
    "SVGPathFill": {
      "general": {
        "fill": "var(--maxi-light-icon-fill,rgba(var(--maxi-light-color-4,255,74,23),1))",
      },
      "label": "SVG path-fill",
    },
  },
  "  .maxi-svg-icon-block__icon svg use[data-stroke]:not([stroke^="none"])": {
    "SVGPathStroke": {
      "general": {
        "stroke": "var(--maxi-light-icon-stroke,rgba(var(--maxi-light-color-7,8,18,25),1))",
      },
      "label": "SVG Path stroke",
    },
  },
  "  .maxi-svg-icon-block__icon svg[data-fill]:not([fill^="none"])": {
    "SVGPathFill": {
      "general": {
        "fill": "var(--maxi-light-icon-fill,rgba(var(--maxi-light-color-4,255,74,23),1))",
      },
      "label": "SVG path-fill",
    },
  },
  "  .maxi-svg-icon-block__icon svg[data-fill]:not([fill^="none"]) *": {
    "SVGPathFill": {
      "general": {
        "fill": "var(--maxi-light-icon-fill,rgba(var(--maxi-light-color-4,255,74,23),1))",
      },
      "label": "SVG path-fill",
    },
  },
  "  .maxi-svg-icon-block__icon svg[data-stroke]:not([stroke^="none"])": {
    "SVGPathStroke": {
      "general": {
        "stroke": "var(--maxi-light-icon-stroke,rgba(var(--maxi-light-color-7,8,18,25),1))",
      },
      "label": "SVG Path stroke",
    },
  },
  "  .maxi-svg-icon-block__icon svg[data-stroke]:not([stroke^="none"]) *": {
    "SVGPathStroke": {
      "general": {
        "stroke": "var(--maxi-light-icon-stroke,rgba(var(--maxi-light-color-7,8,18,25),1))",
      },
      "label": "SVG Path stroke",
    },
  },
}
`;

exports[`getSVGStyles Should return correct icon size 1`] = `
{
  "iconSize": {
    "general": {
      "width": "32px",
    },
    "l": {
      "width": "32px",
    },
    "label": "Icon size",
    "m": {
      "width": "32px",
    },
    "s": {
      "width": "32px",
    },
    "xl": {
      "width": "32px",
    },
    "xs": {
      "width": "32px",
    },
    "xxl": {
      "width": "32px",
    },
  },
}
`;

exports[`getSVGStyles Should return correct icon size with disableHeight: false 1`] = `
{
  "iconSize": {
    "general": {
      "height": "32px",
      "width": "32px",
    },
    "l": {
      "height": "32px",
      "width": "32px",
    },
    "label": "Icon size",
    "m": {
      "height": "32px",
      "width": "32px",
    },
    "s": {
      "height": "32px",
      "width": "32px",
    },
    "xl": {
      "height": "32px",
      "width": "32px",
    },
    "xs": {
      "height": "32px",
      "width": "32px",
    },
    "xxl": {
      "height": "32px",
      "width": "32px",
    },
  },
}
`;

exports[`getSVGStyles Should return right styles with height fit-content, width/height ratio < 1 with disableHeight: true 1`] = `
{
  "iconSize": {
    "general": {},
    "label": "Icon size",
  },
}
`;

exports[`getSVGStyles Should return right styles with height fit-content, width/height ratio > 1 with disableHeight true 1`] = `
{
  "iconSize": {
    "general": {},
    "label": "Icon size",
  },
}
`;

exports[`getSVGStyles Should work on responsive 1`] = `
{
  "iconSize": {
    "general": {},
    "label": "Icon size",
  },
}
`;
